# feralfile-device

./: README.md  chromium-flags.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: build-app-arm64.yml  build-app-to-cf.yml  build-app-wayland.yml  build-app-x86.yml  build-app.yml  build-components.yaml  build-image-to-cf.yml  build-image.yml  build-yocto-image.yml  build.yml  c-lint.yml  flutter-lint.yml  pacman-repo.yaml  pure-build-image-to-cf.yml
archiso-radxa-x4/: bootstrap_packages.x86_64  packages.x86_64  pacman.conf  profiledef.sh
benchmark/: 5c.sh  macm.sh  pi5.sh  x4.sh  x4_archlinux.sh
cf-build-distribution/: .gitignore  package.json  wrangler.toml
components/feral-setupd/: Cargo.toml  README.md  makefile
components/feral-setupd/scripts/: fresh-debug.sh  fresh-release.sh  resume-release.sh  sync-to-x4.sh
components/feral-setupd/src/: ble.rs  cache.rs  cdp.rs  constant.rs  dbus_utils.rs  encoding.rs  main.rs  wifi_utils.rs
components/feral-state/: go.mod  (+2 more)
configs/: 99-display-hotplug.rules
custom-stage/: 00-run.sh  prerun.sh
custom-stage-1/: prerun.sh
custom-stage-installation/:  install.sh  install.sh
docs/: apt_auto_release.md  flashing-provisioning-playbook.md  modify_existing_img.md  system-architecture.md
feralfile-bluetooth/: Makefile  bluetooth_service.c  bluetooth_service.h  gatt-interfaces.c  gatt-interfaces.h
launcher-app/: .gitignore  pubspec.yaml
lib/: main.dart
linux/: CMakeLists.txt
scripts/: create-release.sh  shrink_image.sh
(+293 files in other folders)
