[package]
name    = "feral-setupd"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer         = { version = "0.17.3", features = ["bluetoothd"] }
tokio         = { version = "1.45.0", features = ["full"] }
uuid          = "1.16.0"
futures-util  = "0.3"
dbus          = "0.9"
mac_address   = "1.1.8"
md5 = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
url = "2.5.4"
tungstenite = "0.26.2"
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
